fix scrollbar for casts

--- a/src/app/modules/vistream/components/pages/details-media/details-media.component.scss
+++ b/src/app/modules/vistream/components/pages/details-media/details-media.component.scss
@@ -1,3 +1,23 @@
-::-webkit-scrollbar{
+#casts::-webkit-scrollbar-track
+{
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+	border-radius: 12px;
+	background-color: #fff;
+}
+
+#casts::-webkit-scrollbar
+{
+	width: 10px;
+}
+
+#casts::-webkit-scrollbar-thumb
+{
+	border-radius: 14px;
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+	background-color: rgb(136 24 143);
+}
+
+#productions::-webkit-scrollbar
+{
 	display: none;
 }
